fixing text alignment

--- a/IsraYelp/mystyle.css
+++ b/IsraYelp/mystyle.css
@@ -157,6 +157,24 @@
 	PADDING-TOP: 10px;	
 	BORDER-BOTTOM: #ccc 1px solid} 
 
+	#bodyContainer_Centered {	
+	BORDER-RIGHT: #ccc 1px solid;	
+	PADDING-RIGHT: 5px;	
+	BORDER-TOP: #ccc 1px solid;	
+	PADDING-LEFT: 0px;	
+	PADDING-BOTTOM: 10px;	
+	MARGIN-LEFT: auto;	
+	BORDER-LEFT: #ccc 1px solid;	
+	WIDTH: 930px;	
+	MARGIN-RIGHT: auto;	
+	PADDING-TOP: 10px;	
+	BORDER-BOTTOM: #ccc 1px solid;
+	TEXT-ALIGN: center} 
+	
+	#bodyContainer_Centered		P{
+	TEXT-ALIGN: center}	
+	
+
 	H1 {	
 	FONT-FAMILY: arial, verdana, sans-serif, david;
 	FONT-WEIGHT: bold;	
